<resources>
    <string name="app_name">GeoLocaliza Uema</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GeoLocaliza Uema</string>
    <string name="nav_header_subtitle">Aplicativo de Localização da UEMA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="pontos_de_onibus">Pontos de Ônibus</string>
    <string name="predio_de_letras">Prédio de Letras</string>
    <string name="predio_de_biologia">Prédio de Biologia</string>
    <string name="escola_paulo_vi">Escola Paulo VI</string>
    <string name="uemanet">UEMANET</string>
    <string name="vet_ru">Veterinária / RU</string>
    <string name="ponto_final">Ponto Final</string>
    <string name="predios">Prédios</string>
    <string name="pr_reitoria_de_planejamento">Pró Reitoria de Planejamento</string>
    <string name="predio_de_matematica">Prédio de Matemática</string>
    <string name="CCSA">CCSA</string>
    <string name="predio_de_geografia">Prédio de Geografia</string>
    <string name="predio_veterinaria">Prédio de Veterinária</string>
    <string name="predio_de_Agronomia">Prédio de Agronomia</string>
    <string name="predio_biblioteca">Biblioteca</string>
    <string name="predio_restaurante">Restaurante Universitário</string>
    <string name="predio_prog">Pró-Reitoria de Graduação</string>
    <string name="predio_proplan">Pró-Reitoria de Planej.</string>
    <string name="predio_cct">CCT</string>
</resources>
