<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_paradas"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pontos_de_onibus">
            <menu>

                <item
                    android:id="@+id/parada_letras"
                    android:title="@string/predio_de_letras"/>
                <item
                    android:id="@+id/parada_biologia"
                    android:title="@string/predio_de_biologia"/>
                <item
                    android:id="@+id/parada_escola"
                    android:title="@string/escola_paulo_vi"/>
                <item
                    android:id="@+id/parada_uemanet"
                    android:title="@string/uemanet"/>
                <item
                    android:id="@+id/parada_reitoria"
                    android:title="@string/pr_reitoria_de_planejamento"/>
                <item
                    android:id="@+id/parada_vet_ru"
                    android:title="@string/vet_ru"/>
                <item
                    android:id="@+id/parada_ponto_final"
                    android:title="@string/ponto_final"/>
            </menu>
        </item>
        <item
            android:id="@+id/nav_predios"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/predios">
            <menu>

                <item
                    android:id="@+id/predio_letras"
                    android:title="@string/predio_de_letras"/>
                <item
                    android:id="@+id/predio_geografia"
                    android:title="@string/predio_de_geografia"/>
                <item
                    android:id="@+id/predio_biologia"
                    android:title="@string/predio_de_biologia"/>
                <item
                    android:id="@+id/predio_matematica"
                    android:title="@string/predio_de_matematica"/>
                <item
                    android:id="@+id/predio_ccsa"
                    android:title="@string/CCSA"/>

                <item
                    android:id="@+id/predio_veterinaria"
                    android:title="@string/predio_veterinaria"/>
                <item
                    android:id="@+id/predio_agronomia"
                    android:title="@string/predio_de_Agronomia"/>
                <item
                    android:id="@+id/predio_cct"
                    android:title="@string/predio_cct"/>
                <item
                    android:id="@+id/predio_biblioteca"
                    android:title="@string/predio_biblioteca"/>
                <item
                    android:id="@+id/predio_restaurante"
                    android:title="@string/predio_restaurante"/>
                <item
                    android:id="@+id/predio_prog"
                    android:title="@string/predio_prog"/>
                <item
                    android:id="@+id/predio_proplan"
                    android:title="@string/predio_proplan"/>
            </menu>
        </item>

    </group>

</menu>
